# decidoc

./: README.md  decidoc.py  keuzelog.md  pyproject.toml
.decidoc/: config.toml
decidoc/: a  apa.py  cli.py  functions.py  helper_functions.py
decidoc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
