[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decidoc"
version = "1.1.0"
description = "CLI tool for documenting decisions and learning during internships"
authors = [{ name = "Thom Versluis" }]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0"
]

[project.scripts]
decidoc = "decidoc.cli:main"
